--- a/biome.json
+++ b/biome.json
@@ -7,7 +7,7 @@
 	},
 	"files": {
 		"ignoreUnknown": false,
-		"includes": ["**", "!contracts/lib"]
+		"includes": ["**", "!dist", "!contracts/lib"]
 	},
 	"formatter": {
 		"enabled": true,
