--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "contracts/specs"]
 	path = contracts/specs
 	url = git@github.com:tempoxyz/specs.git
+[submodule "test/tempo"]
+	path = test/tempo
+	url = git@github.com:tempoxyz/tempo.git
