--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
 		"check": "biome check . --write --unsafe",
 		"check:types": "tsc -b",
 		"gen:abis": "forge build --config-path ./contracts/specs/foundry.toml && bun scripts/gen:abis.ts && bun run check",
-		"test": "bun test --conditions=src"
+		"test": "bun test --conditions=src",
+		"test:install": "cd test/tempo && cargo install --path bin/tempo"
 	},
 	"zshy": {
 		"exports": {
