--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,6 +30,7 @@ jobs:
           # This makes Actions fetch all Git history so that Changesets can generate changelogs with the correct commits
           fetch-depth: 0
           submodules: 'recursive'
+          token: ${{ secrets.GH_PAT }}
 
       - name: Install dependencies
         uses: ./.github/actions/install-dependencies
