--- a/.github/workflows/prerelease.yml
+++ b/.github/workflows/prerelease.yml
@@ -23,4 +23,4 @@ jobs:
       - name: Build
         run: bun run build
 
-      - run: bunx pkg-pr-new publish --compact --bun
+      - run: bunx pkg-pr-new publish --bun
