feat: testnet-5 (aa accounts) (#21)
Co-authored-by: tmm <tom@meagher.co>

--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -10,7 +10,7 @@
 	],
 	"commit": false,
 	"fixed": [],
-	"ignore": [],
+	"ignore": ["playground"],
 	"linked": [],
 	"updateInternalDependencies": "patch"
 }
