--- a/package.json
+++ b/package.json
@@ -9,42 +9,80 @@
 		"check": "biome check . --write --unsafe",
 		"check:types": "tsc -b",
 		"gen:abis": "node scripts/gen:abis.ts && pnpm check",
+		"playground": "pnpm preconstruct && pnpm --filter playground dev",
+		"postinstall": "git submodule update --init --recursive",
 		"preconstruct": "zile dev --project ./tsconfig.build.json && pnpm check",
 		"submodules:pull": "git submodule foreach git pull origin main && pnpm gen:abis",
 		"test": "vitest",
-		"test:install": "cd test/tempo && cargo install --path bin/tempo && cargo run --bin tempo-bench generate-genesis --accounts 1 --output ../../src/prool/internal/chain.json"
+		"test:install": "cd test/tempo && cargo install --path bin/tempo && cargo run --bin tempo-xtask generate-genesis --accounts 1 --output ../../src/prool/internal/chain.json"
 	},
 	"dependencies": {
 		"ox": "~0.9.9"
 	},
 	"peerDependencies": {
+		"@tanstack/query-core": ">=5.0.0",
+		"@tanstack/react-query": ">=5.0.0",
+		"@wagmi/core": ">=2.18",
 		"prool": "^0",
-		"viem": ">=2.38.2"
+		"viem": ">=2.38.4",
+		"wagmi": ">=2.19"
 	},
 	"peerDependenciesMeta": {
+		"@tanstack/react-query": {
+			"optional": true
+		},
+		"@tanstack/query-core": {
+			"optional": true
+		},
+		"@wagmi/core": {
+			"optional": true
+		},
 		"prool": {
 			"optional": true
 		},
 		"viem": {
 			"optional": true
+		},
+		"wagmi": {
+			"optional": true
 		}
 	},
 	"packageManager": "pnpm@10.18.3",
+	"devEngines": {
+		"runtime": {
+			"name": "node",
+			"version": "^24.5.1",
+			"onFail": "download"
+		}
+	},
 	"author": "jxom <j@wevm.dev>",
 	"license": "MIT",
 	"devDependencies": {
-		"@ark/attest": "^0.49.0",
+		"@ark/attest": "^0.51.0",
 		"@biomejs/biome": "^2.2.4",
 		"@changesets/changelog-github": "^0.5.0",
 		"@changesets/cli": "^2.27.7",
 		"@remix-run/node-fetch-server": "^0.10.0",
+		"@tanstack/query-core": "^5.90.5",
+		"@tanstack/react-query": "catalog:default",
 		"@types/node": "latest",
-		"@vitest/coverage-v8": "3.2.4",
-		"prool": "latest",
+		"@types/react": "catalog:default",
+		"@types/react-dom": "catalog:default",
+		"@vitejs/plugin-react": "catalog:default",
+		"@vitest/browser": "^4.0.1",
+		"@vitest/browser-playwright": "^4.0.2",
+		"@vitest/coverage-v8": "^4.0.2",
+		"@wagmi/core": "catalog:default",
+		"playwright": "^1.56.1",
+		"prool": "catalog:default",
+		"react": "catalog:default",
+		"react-dom": "catalog:default",
 		"simple-git-hooks": "^2.13.1",
-		"typescript": "^5.9.2",
-		"viem": "^2.38.2",
-		"vitest": "^3.2.4",
+		"typescript": "catalog:default",
+		"viem": "catalog:default",
+		"vitest": "^4.0.2",
+		"vitest-browser-react": "^2.0.0",
+		"wagmi": "catalog:default",
 		"zile": "^0.0.5"
 	},
 	"files": [
@@ -80,9 +118,19 @@
 			"src": "./src/viem/index.ts",
 			"types": "./dist/viem/index.d.ts",
 			"default": "./dist/viem/index.js"
+		},
+		"./wagmi": {
+			"src": "./src/wagmi/index.ts",
+			"types": "./dist/wagmi/index.d.ts",
+			"default": "./dist/wagmi/index.js"
 		}
 	},
 	"simple-git-hooks": {
 		"pre-commit": "pnpm check"
+	},
+	"pnpm": {
+		"overrides": {
+			"viem": "catalog:default"
+		}
 	}
 }
