feat: init examples

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
 		"changeset:publish": "pnpm changeset:prepublish && changeset publish",
 		"changeset:version": "changeset version && pnpm check",
 		"check": "biome check . --write --unsafe",
-		"check:types": "tsgo -b",
+		"check:types": "tsgo -b && pnpm check:types:examples",
+		"check:types:examples": "pnpm --filter examples/* check:types",
 		"gen:abis": "node scripts/gen:abis.ts && pnpm check",
 		"playground": "pnpm preconstruct && pnpm --filter playground dev",
 		"postinstall": "git submodule update --init --recursive",
@@ -56,6 +57,7 @@
 	},
 	"pnpm": {
 		"overrides": {
+			"tempo.ts": "workspace:*",
 			"viem": "catalog:default"
 		}
 	},
