chore: tweak examples

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
 		"changeset:version": "changeset version && pnpm check",
 		"check": "biome check . --write --unsafe",
 		"check:types": "tsgo -b && pnpm check:types:examples",
-		"check:types:examples": "pnpm --filter examples/* check:types",
+		"check:types:examples": "pnpm --filter *-example check:types",
 		"gen:abis": "node scripts/gen:abis.ts && pnpm check",
 		"playground": "pnpm preconstruct && pnpm --filter playground dev",
 		"postinstall": "git submodule update --init --recursive",
