--- a/examples/exchange/package.json
+++ b/examples/exchange/package.json
@@ -3,7 +3,7 @@
 	"private": true,
 	"type": "module",
 	"scripts": {
-		"check:types": "tsc",
+		"check:types": "tsc -b",
 		"dev": "vite",
 		"build": "tsc -b && vite build",
 		"preview": "vite preview"
