chore: tweak test setup for hosted envs

--- a/.github/workflows/verify.yml
+++ b/.github/workflows/verify.yml
@@ -24,8 +24,8 @@ jobs:
       - name: Check types
         run: pnpm preconstruct && pnpm check:types
 
-  test:
-    name: Test Runtime
+  test-local:
+    name: Test Runtime (local)
     runs-on: ubuntu-latest
     steps:
       - name: Clone repository
@@ -70,3 +70,27 @@ jobs:
         run: pnpm test --bail=1
         env:
           CI: true
+
+  test-deployed:
+    name: Test Runtime (e2e) (${{ matrix.rpc-env }})
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        rpc-env: 
+          - devnet
+          # - testnet
+    steps:
+      - name: Clone repository
+        uses: actions/checkout@v4
+        with:
+          submodules: 'recursive'
+          token: ${{ secrets.GH_PAT }}
+
+      - name: Install dependencies
+        uses: ./.github/actions/install-dependencies
+
+      - name: Run tests
+        run: pnpm test e2e --bail=1
+        env:
+          CI: true
+          VITE_RPC_ENV: ${{ matrix.rpc-env }}
