--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -13,7 +13,7 @@ catalog:
   react: ^19.1.1
   react-dom: ^19.1.1
   typescript: ^5.9.3
-  viem: ^2.38.4
+  viem: https://pkg.pr.new/viem@9b2e657
   wagmi: 2.19.0
 
 onlyBuiltDependencies:
