--- a/.github/workflows/verify.yml
+++ b/.github/workflows/verify.yml
@@ -92,7 +92,10 @@ jobs:
         uses: ./.github/actions/install-dependencies
 
       - name: Run tests
-        run: pnpm test e2e --bail=1
+        uses: nick-fields/retry@v3
+        with:
+          max_attempts: 3
+          command: pnpm test e2e --bail=1
         env:
           CI: true
           VITE_NODE_ENV: ${{ matrix.node-env }}
