--- a/examples/accounts/package.json
+++ b/examples/accounts/package.json
@@ -13,13 +13,14 @@
 	},
 	"dependencies": {
 		"@remix-run/fetch-router": "~0.11.0",
+		"@remix-run/session": "^0.4.1",
 		"@tanstack/react-query": "^5",
 		"ox": "~0.9.17",
 		"react": "^19",
 		"react-dom": "^19",
 		"tempo.ts": "~0.12.1",
 		"viem": "^2",
-		"wagmi": "^3"
+		"wagmi": "3.1.1"
 	},
 	"devDependencies": {
 		"@cloudflare/vite-plugin": "^1.13.18",
